--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
   <!-- Primary Meta Tags -->
   <title>Anouar JRIDI | MEAN Stack Developer | MERN Stack Development | Software Engineer</title>
-  <meta name="title" content="Muffeez Khalid | MEAN Stack Developer | MERN Stack Development | Software Engineer">
+  <meta name="title" content="Anouar JRIDI | MEAN Stack Developer | MERN Stack Development | Software Engineer">
   <meta name="description" content="As a software engineer with expertise in both MEAN and MERN stacks, I have a comprehensive understanding of full-stack web development. My strong foundation in JavaScript allows me to effectively work with front-end technologies such as Angular and React, as well as back-end technologies such as Node.js and Express.">
 
   <!-- Open Graph / Facebook -->
@@ -21,7 +21,7 @@
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://mufeez1.github.io/muffeez/">
   <meta property="twitter:title"
-    content="Muffeez Khalid | MEAN Stack Developer | MERN Stack Development | Software Engineer">
+    content="Anouar JRIDI | MEAN Stack Developer | MERN Stack Development | Software Engineer">
   <meta property="twitter:description" content="As a software engineer with expertise in both MEAN and MERN stacks, I have a comprehensive understanding of full-stack web development. My strong foundation in JavaScript allows me to effectively work with front-end technologies such as Angular and React, as well as back-end technologies such as Node.js and Express.">
   <meta property="twitter:image" content="https://mufeez1.github.io/muffeez/assets/images/preview.png">
 
