--- a/src/index.html
+++ b/src/index.html
@@ -5,23 +5,23 @@
   <meta charset="utf-8">
 
   <!-- Primary Meta Tags -->
-  <title>Anouar JRIDI | MEAN Stack Developer | MERN Stack Development | Software Engineer</title>
-  <meta name="title" content="Anouar JRIDI | MEAN Stack Developer | MERN Stack Development | Software Engineer">
+  <title>Marouen Kachroudi | Lecturer / Phd. / MCT</title>
+  <meta name="title" content="Marouen Kachroudi | Lecturer / Phd. / MCT">
   <meta name="description" content="As a software engineer with expertise in both MEAN and MERN stacks, I have a comprehensive understanding of full-stack web development. My strong foundation in JavaScript allows me to effectively work with front-end technologies such as Angular and React, as well as back-end technologies such as Node.js and Express.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://mufeez1.github.io/muffeez/">
+  <meta property="og:url" content="https://mkachroudi.org/">
   <meta property="og:title"
-    content="Anouar JRIDI | MEAN Stack Developer | MERN Stack Development | Software Engineer">
+    content="Marouen Kachroudi | Lecturer / Phd. / MCT">
   <meta property="og:description" content="As a software engineer with expertise in both MEAN and MERN stacks, I have a comprehensive understanding of full-stack web development. My strong foundation in JavaScript allows me to effectively work with front-end technologies such as Angular and React, as well as back-end technologies such as Node.js and Express.">
   <meta property="og:image" content="https://mufeez1.github.io/muffeez/assets/images/preview.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://mufeez1.github.io/muffeez/">
+  <meta property="twitter:url" content="https://mkachroudi.org/">
   <meta property="twitter:title"
-    content="Anouar JRIDI | MEAN Stack Developer | MERN Stack Development | Software Engineer">
+    content="Marouen Kachroudi | Lecturer / Phd. / MCT">
   <meta property="twitter:description" content="As a software engineer with expertise in both MEAN and MERN stacks, I have a comprehensive understanding of full-stack web development. My strong foundation in JavaScript allows me to effectively work with front-end technologies such as Angular and React, as well as back-end technologies such as Node.js and Express.">
   <meta property="twitter:image" content="https://mufeez1.github.io/muffeez/assets/images/preview.png">
 
