--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,14 @@
   <!-- Primary Meta Tags -->
   <title>Marouen Kachroudi | Lecturer / Phd. / MCT</title>
   <meta name="title" content="Marouen Kachroudi | Lecturer / Phd. / MCT">
-  <meta name="description" content="As a software engineer with expertise in both MEAN and MERN stacks, I have a comprehensive understanding of full-stack web development. My strong foundation in JavaScript allows me to effectively work with front-end technologies such as Angular and React, as well as back-end technologies such as Node.js and Express.">
+  <meta name="description" content="With 17+ years in academia, I’ve taught across undergraduate, master’s, and engineering programs, and supervised over a dozen theses, including 2 PhDs. I’ve co-authored 30+ peer-reviewed publications and held pedagogical, scientific, and administrative roles contributing to academic and institutional growth.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://mkachroudi.org/">
   <meta property="og:title"
     content="Marouen Kachroudi | Lecturer / Phd. / MCT">
-  <meta property="og:description" content="As a software engineer with expertise in both MEAN and MERN stacks, I have a comprehensive understanding of full-stack web development. My strong foundation in JavaScript allows me to effectively work with front-end technologies such as Angular and React, as well as back-end technologies such as Node.js and Express.">
+  <meta property="og:description" content="With 17+ years in academia, I’ve taught across undergraduate, master’s, and engineering programs, and supervised over a dozen theses, including 2 PhDs. I’ve co-authored 30+ peer-reviewed publications and held pedagogical, scientific, and administrative roles contributing to academic and institutional growth.">
   <meta property="og:image" content="assets/images/preview.png">
 
   <!-- Twitter -->
@@ -22,7 +22,7 @@
   <meta property="twitter:url" content="https://mkachroudi.org/">
   <meta property="twitter:title"
     content="Marouen Kachroudi | Lecturer / Phd. / MCT">
-  <meta property="twitter:description" content="As a software engineer with expertise in both MEAN and MERN stacks, I have a comprehensive understanding of full-stack web development. My strong foundation in JavaScript allows me to effectively work with front-end technologies such as Angular and React, as well as back-end technologies such as Node.js and Express.">
+  <meta property="twitter:description" content="With 17+ years in academia, I’ve taught across undergraduate, master’s, and engineering programs, and supervised over a dozen theses, including 2 PhDs. I’ve co-authored 30+ peer-reviewed publications and held pedagogical, scientific, and administrative roles contributing to academic and institutional growth.">
   <meta property="twitter:image" content="assets/images/preview.png">
 
   <base href="/">
